--- a/examples/poc/manifests/inferencepool-with-model.yaml
+++ b/examples/poc/manifests/inferencepool-with-model.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   targetPortNumber: 8000
   selector:
-    "app": "vllm-llama2-7b-pool"
+    app: vllm-llama2-7b-pool
 ---
 apiVersion: inference.networking.x-k8s.io/v1alpha1
 kind: InferenceModel
@@ -29,4 +29,3 @@ spec:
     weight: 50
   - name: tweet-summary-1
     weight: 50
-
